--- a/GamePlanner.DAL/GamePlanner.DAL.csproj
+++ b/GamePlanner.DAL/GamePlanner.DAL.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Db\" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
   </ItemGroup>
 
 </Project>
