--- a/GamePlanner/appsettings.json
+++ b/GamePlanner/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:game-planner-db-server.database.windows.net,1433;Initial Catalog=GamePlannerDB;Persist Security Info=False;User ID=GamePlannerAdmin;Password=My1GamePlannerPassword!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
