Added Email service

--- a/GamePlanner/appsettings.json
+++ b/GamePlanner/appsettings.json
@@ -12,5 +12,11 @@
     "Secret": "JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr",
     "TokenValidityInMinutes": 15,
     "RefreshTokenValidityInDays": 7
+  },
+  "EmailSettings": {
+    "Server": "smtp.office365.com",
+    "Port": "587",
+    "Address": "gameplanner.pw1year2@outlook.com",
+    "Password": "My1EmailPassword!"
   }
 }
