--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,39 +1,27 @@
 # Docker
 # Build and push an image to Azure Container Registry
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
+ 
 trigger:
 - master
+ 
+pool:
+  vmImage: ubuntu-latest
+ 
+steps:
+- script: echo Hello World!
+  displayName: 'Run a one line scirpt'
+- task: Docker@2
+  inputs:
+    containerRegistry: 'GamePlannerContainerRegistry'
+    repository: 'GamePlannerBackend'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dokerfile'
+    buildContext: '$(System.DefaultWorkingDirectory)'
+    tags: |
+      $(Build.BuildId)
+      latest
 
-resources:
-- repo: self
-
-variables:
-  # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: '5263ffb1-0fb6-4e10-8fe5-4c30c29a153e'
-  imageRepository: 'gameplannerbackendimage'
-  containerRegistry: 'gameplannercontanierregistry.azurecr.io'
-  dockerfilePath: '**/Dockerfile'
-  tag: '$(Build.BuildId)'
-
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-
-stages:
-- stage: Build
-  displayName: Build and push stage
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+- script: |
+    echo Add other task to build, test, and deploy your project.
+  displayName: 'Run a multi line script'
