--- a/GamePlanner/GamePlanner.csproj
+++ b/GamePlanner/GamePlanner.csproj
@@ -36,4 +36,10 @@
     <ProjectReference Include="..\GamePlanner.DAL\GamePlanner.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Templates\DeleteReservationEmailTemplate.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
