--- a/GamePlanner/GamePlanner.csproj
+++ b/GamePlanner/GamePlanner.csproj
@@ -38,7 +38,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Templates\ConfirmReservationEmailTemplate.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Templates\DeleteReservationEmailTemplate.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Templates\QueuedReservationEmailTemplate.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
